[project]
authors = [{name = "Johannes Röttenbacher", email = "jr-alias@posteo.de"}]
name = "data-publication-plots"
requires-python = ">= 3.11"
version = "1.0.0"
dependencies = ["sickle>=0.7.0,<0.8"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.tasks]
harvest = "python metadata_harvest.py"
plot = { cmd = "python ac3_data_publication_plots.py", depends-on = ["harvest"] }


[tool.pixi.dependencies]
pixi-pycharm = ">=0.0.9,<0.0.10"
python = "3.13.*"
matplotlib = ">=3.10.3,<4"
numpy = ">=2.2.6,<3"
pandas = ">=2.2.3,<3"
requests = ">=2.32.3,<3"
toml = ">=0.10.2,<0.11"
wordcloud = ">=1.9.4,<2"
pillow = ">=11.2.1,<12"
tqdm = ">=4.67.1,<5"
seaborn = ">=0.13.2,<0.14"
pandas-stubs = ">=2.3.2.250926,<3"
